--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
+
   <body class="page">
     <header class="page-header">
-      <a class="logo" href="#">
+      <a class="logo" href="#" aria-label="Текущая страница">
         <img src="" alt="Логотип сайта Седона" class="logo">
       </a>
       <nav class="navigation main-menu">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-active" href="#">Главная</a>
+            <a class="navigation-link navigation-link-active" href="#" aria-label="Текущая страница">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О седоне</a>
@@ -78,10 +80,10 @@
         </ul>
       </section>
       <section class="servis">
-         <h2 class="visually-hidden">Сервис</h2>
-         <p>Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
-         <p>Опытный персонал и качественное обслуживание!</p>
-         <ul class="servis-list">
+        <h2 class="visually-hidden">Сервис</h2>
+        <p>Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+        <p>Опытный персонал и качественное обслуживание!</p>
+        <ul class="servis-list">
           <li class="servis-item">
             <h3 class="servis-title">Жильё</h3>
             <p class="servis-desc">Рекомендуем пожить в настоящем мотеле,всё как в кино!</p>
@@ -94,23 +96,24 @@
             <h3 class="servis-title">Сувениры</h3>
             <p class="servis-desc">Не только китайского, но и настоящего местного производства!</p>
           </li>
-         </ul>
+        </ul>
       </section>
       <section class="search">
         <h2 class="visually-hidden">Подбор гостиниц</h2>
         <p class="search-slogan">Заинтересовались?</p>
-        <p class="search-text" >Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <p class="search-text">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне
+        </p>
         <button class="btn search-btn">Поиск гостиницы в седоне</button>
       </section>
     </main>
-     <footer>
+    <footer>
       <article>
         <h2>Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="appointment-form" action="https://echo.htmlacademy.ru/" method="post">
           <p>
             <label for="email">Почта</label>
-            <input type="email" name="email" placeholder="Ваш e-mail"  id="email" required>
+            <input type="email" name="email" placeholder="Ваш e-mail" id="email" required>
           </p>
           <button class="button" type="submit">Подписаться</button>
         </form>
@@ -138,6 +141,7 @@
       <a href="https://htmlacademy.ru/">
         <img src="" alt="Логотип сайта Седона" class="logo">
       </a>
-     </footer>
+    </footer>
   </body>
+
 </html>
