Добавил все изображения, исправил другие недочеты.

--- a/catalog.html
+++ b/catalog.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="ru">
-
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Каталог</title>
   </head>
-
   <body>
     <header class="page-header">
-      <a class="logo" href="#">
-        <img src="" alt="Логотип сайта Седона" class="logo">
+      <a class="logo" href="index.html">
+        <img src="images/logo.svg" width="140" height="70" alt="Логотип сайта Седона" class="logo">
       </a>
       <nav class="navigation main-menu">
         <ul class="navigation-list">
@@ -126,7 +124,7 @@
             <!-- Карточка гостиницы-->
             <li class="product-card">
               <a href="#" class="product-card-link">
-                <img src="" alt="Вид на звездное небо между двумя скалами" class="product-card-image">
+                <img src="images/hotel/hotel-1.jpg" alt="Вид на звездное небо между двумя скалами" class="product-card-image">
                 <h3 class="product-card-title">Amara Resort & Spa</h3>
               </a>
               <p class="product-card-item-type">Гостиница <b class="product-card-item-price">от 4000 Р</b></p>
@@ -139,7 +137,7 @@
             </li>
             <li class="product-card">
               <a href="#" class="product-card-link">
-                <img src="" alt="Вид на пейзаж в городке Седона, штат Аризона" class="product-card-image">
+                <img src="images/hotel/hotel-2.jpg" alt="Вид на пейзаж в городке Седона, штат Аризона" class="product-card-image">
                 <h3 class="product-card-title">Villas at Poco Diablo</h3>
               </a>
               <p class="product-card-item-type">Гостиница <b class="product-card-item-price">От 5000 ₽</b></p>
@@ -152,7 +150,7 @@
             </li>
             <li class="product-card">
               <a href="#" class="product-card-link">
-                <img src="" alt="Вид на горы" class="product-card-image">
+                <img src="images/hotel/hotel-3.jpg" alt="Вид на горы" class="product-card-image">
                 <h3 class="product-card-title">Desert Quail Inn</h3>
               </a>
               <p class="product-card-item-type">Гостиница <b class="product-card-item-price">От 2500 ₽</b></p>
@@ -165,7 +163,7 @@
             </li>
             <li class="product-card">
               <a href="#" class="product-card-link">
-                <img src="" alt="Вид на карьер" class="product-card-image">
+                <img src="images/hotel/hotel-4.jpg" alt="Вид на карьер" class="product-card-image">
                 <h3 class="product-card-title">GreenTree Inn</h3>
               </a>
               <p class="product-card-item-type">Гостиница <b class="product-card-item-price">От 1500 ₽</b></p>
@@ -222,9 +220,8 @@
         <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </address>
       <a href="https://htmlacademy.ru/">
-        <img src="" alt="Логотип сайта Седона" class="logo">
+        <img width="115" height="33" src="images/logo-footer.svg" alt="Логотип сайта Седона" class="logo">
       </a>
     </footer>
   </body>
-
 </html>
