--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="ru">
-
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
-
   <body class="page">
     <header class="page-header">
       <a class="logo" href="#" aria-label="Текущая страница">
-        <img src="" alt="Логотип сайта Седона" class="logo">
+        <img src="images/logo.svg" width="140" height="70" alt="Логотип сайта Седона" class="logo">
       </a>
       <nav class="navigation main-menu">
         <ul class="navigation-list">
@@ -44,7 +42,7 @@
       <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
       <section class="welcom-screen">
         <h2 class="visually-hidden">Добро пожаловать в великолепную Седону</h2>
-        <img src="" alt="Добро пожаловать в великолепную Седону ">
+        <img src="images/welcome.svg" width="458" height="352" alt="Добро пожаловать в великолепную Седону ">
       </section>
       <section class="advantage">
         <h2 class="visually-hidden">Примущестува</h2>
@@ -56,7 +54,7 @@
               <h3 class="advantage-title">Настоящий <br>городок</h3>
               <p class="advantage-text">Седона — не аттракцион для <br> туристов, там течёт своя <br> жизнь</p>
             </div>
-            <img class="advantage-item__img" src="" alt="">
+            <img class="advantage-item__img" width="800" height="385" src="images/photo-1.jpg" alt="Вид на вход в отель">
           </li>
           <li class="advantage-item">
             <h3 class="advantage-title">Небольшая <br> площадь</h3>
@@ -71,7 +69,7 @@
             <p class="advantage-text">Большинство едет в Гранд <br> Каньон и толпится там</p>
           </li>
           <li class="advantage-item">
-            <img class="advantage-item__img" src="" alt="">
+            <img class="advantage-item__img" width="800" height="385" src="images/photo-2.jpg" alt="Мост дьявола. Природный мост">
             <div class="advantage-item__content">
               <h3 class="advantage-title">Там есть <br> мост дьявола</h3>
               <p class="text">Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется</p>
@@ -139,9 +137,8 @@
         <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </address>
       <a href="https://htmlacademy.ru/">
-        <img src="" alt="Логотип сайта Седона" class="logo">
+        <img width="115" height="33" src="images/logo-footer.svg" alt="Логотип сайта Седона" class="logo">
       </a>
     </footer>
   </body>
-
 </html>
