--- a/catalog.html
+++ b/catalog.html
@@ -124,7 +124,7 @@
             <!-- Карточка гостиницы-->
             <li class="product-card">
               <a href="#" class="product-card-link">
-                <img src="images/hotel/hotel-1.jpg" alt="Вид на звездное небо между двумя скалами" class="product-card-image">
+                <img src="images/hotel/hotel-1.jpg" width="300" height="212" alt="Вид на звездное небо между двумя скалами" class="product-card-image">
                 <h3 class="product-card-title">Amara Resort & Spa</h3>
               </a>
               <p class="product-card-item-type">Гостиница <b class="product-card-item-price">от 4000 Р</b></p>
@@ -137,7 +137,7 @@
             </li>
             <li class="product-card">
               <a href="#" class="product-card-link">
-                <img src="images/hotel/hotel-2.jpg" alt="Вид на пейзаж в городке Седона, штат Аризона" class="product-card-image">
+                <img src="images/hotel/hotel-2.jpg" width="300" height="212" alt="Вид на пейзаж в городке Седона, штат Аризона" class="product-card-image">
                 <h3 class="product-card-title">Villas at Poco Diablo</h3>
               </a>
               <p class="product-card-item-type">Гостиница <b class="product-card-item-price">От 5000 ₽</b></p>
@@ -150,7 +150,7 @@
             </li>
             <li class="product-card">
               <a href="#" class="product-card-link">
-                <img src="images/hotel/hotel-3.jpg" alt="Вид на горы" class="product-card-image">
+                <img src="images/hotel/hotel-3.jpg" width="300" height="212" alt="Вид на горы" class="product-card-image">
                 <h3 class="product-card-title">Desert Quail Inn</h3>
               </a>
               <p class="product-card-item-type">Гостиница <b class="product-card-item-price">От 2500 ₽</b></p>
@@ -163,7 +163,7 @@
             </li>
             <li class="product-card">
               <a href="#" class="product-card-link">
-                <img src="images/hotel/hotel-4.jpg" alt="Вид на карьер" class="product-card-image">
+                <img src="images/hotel/hotel-4.jpg" width="300" height="212" alt="Вид на карьер" class="product-card-image">
                 <h3 class="product-card-title">GreenTree Inn</h3>
               </a>
               <p class="product-card-item-type">Гостиница <b class="product-card-item-price">От 1500 ₽</b></p>
@@ -220,7 +220,7 @@
         <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </address>
       <a href="https://htmlacademy.ru/">
-        <img width="115" height="33" src="images/logo-footer.svg" alt="Логотип сайта Седона" class="logo">
+        <img src="images/logo-footer.svg" width="115" height="33" alt="Логотип сайта Седона" class="logo">
       </a>
     </footer>
   </body>
