--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
       <section class="advantage">
         <h2 class="visually-hidden">Примущестува</h2>
         <p class="subtitle">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</p>
-        <p class="text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+        <p class="advantage-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <ul class="advantage-list">
           <li class="advantage-item">
-            <div class="advantage-item__content">
+            <div class="advantage-item__content first-and-last">
               <h3 class="advantage-title">Настоящий <br>городок</h3>
               <p class="advantage-text">Седона — не аттракцион для <br> туристов, там течёт своя <br> жизнь</p>
             </div>
@@ -71,7 +71,7 @@
           </li>
           <li class="advantage-item">
             <img class="advantage-item__img" width="800" height="385" src="images/photo-2.jpg" alt="Мост дьявола. Природный мост">
-            <div class="advantage-item__content">
+            <div class="advantage-item__content first-and-last">
               <h3 class="advantage-title">Там есть <br> мост дьявола</h3>
               <p class="text">Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется</p>
             </div>
@@ -80,7 +80,7 @@
       </section>
       <section class="servis">
         <h2 class="visually-hidden">Сервис</h2>
-        <p>Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
+        <p class="subtitle">Приезжайте в Седону отдохнуть <br> в комфорте и уюте!</p>
         <p>Опытный персонал и качественное обслуживание!</p>
         <ul class="servis-list">
           <li class="servis-item">
@@ -106,9 +106,9 @@
       </section>
     </main>
     <footer>
-      <article>
-        <h2>Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <article class="newsletter">
+        <h2 class="newsletter-slogan">Подпишитесь на рассылку</h2>
+        <p class="newsletter-text">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="appointment-form" action="https://echo.htmlacademy.ru/" method="post">
           <p>
             <label for="email">Почта</label>
