Добавление шрифтов и стилей текста

--- a/catalog.html
+++ b/catalog.html
@@ -14,7 +14,7 @@
       <nav class="navigation main-menu">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-active" href="#">Главная</a>
+            <a class="navigation-link navigation-link-active" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О седоне</a>
@@ -35,8 +35,8 @@
             </a>
           </li>
         </ul>
-        <a class="navigation-link" href="#">
-          <span class="visually-hidden">Хочу сюда!</span>
+        <a class="button button-nav navigation-link" href="#">
+          Хочу сюда
         </a>
       </nav>
     </header>
