--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             </a>
           </li>
         </ul>
-        <a class="navigation-link" href="#">
-          <span class="visually-hidden">Хочу сюда!</span>
+        <a class="button button-nav navigation-link" href="#">
+          Хочу сюда
         </a>
       </nav>
     </header>
